--- a/estilo4.css
+++ b/estilo4.css
@@ -8,6 +8,35 @@ body{background: #E5E5E5;}
     
 }
 
+.texto {
+    font-family: 'Roboto';
+    font-weight: 400; /** LIGHT */
+    /* color: #5b5b5b; */
+    color: #333333;
+    font-size: 18px; /** 3: MEDIUM */
+    /* 
+    
+        INTELINEADO: https://stackoverflow.com/questions/3845433/set-line-spacing
+    
+    For example, 12px font-size and 4px distant from the bottom and upper
+    lines: 
+    
+        - line-height: 20px; // 4px +12px + 4px 
+
+     Or with em units
+        - line-height: 1.7em; // 1em = 12px in this case. 20/12 == 1.666666  
+    */
+   line-height: 1.8;
+
+   /* JUSTIFICAR TEXTO 
+   
+    - inter-word	Increases/Decreases the space between words
+    - inter-character	Increases/Decreases the space between characters
+    */
+   text-align: justify;
+   text-justify: inter-word;
+}
+
 .izquierda{
     width: 20%;
     min-height: 800px;
@@ -26,23 +55,27 @@ body{background: #E5E5E5;}
     font-weight: normal; /* 400px */
     text-align: right;
     margin-right: 50px;
+
+    /* NO SE QUIERE PONER HASTA ARRIBA EL NÚMERO. CREO QUE ES POR LA FUENTE. */
     margin-top: 0px;
-    margin-bottom: 0px;
+    /* margin-bottom: 0px; */
     padding-top: 0px;
-    font-size: 100px;
-    color: #9c9a9a;
+    font-size: 125px;
+    /* color: #9c9a9a; */
+    color: #d8d8d8;
 }
 
 .titulo {
     font-family: 'Roboto';
     font-weight: 900; /** BLACK */
     color: black;
-    font-size: 35px;
+    font-size: 38px;
     margin-top: 0px;
 }
 
 .derecha1 {
-    padding-top: 0px;
+    /* PUSE ESTE PADDING PARA QUE QUEDE ALINEADO CON EL 1. */
+    padding-top: 18px;
     margin-top: 0px;
     float: left;
 }
