DIVS ACOMODADOS EN SU MEDIDA MÁXIMA
- Ya están acomodados los divs en su máximo ancho, ahora falta ponerlos
  con sus fuentes y eso. El título creo que debe ser con una fuente más
  grande.

--- a/estilo4.css
+++ b/estilo4.css
@@ -8,6 +8,23 @@ body{background: #E5E5E5;}
     
 }
 
+.izquierda{
+    width: 20%;
+    min-height: 800px;
+    min-width: 200px;
+    float: left;  
+    margin-top: 0px;  
+    padding-top: 0px;  
+}
+
+/* EL CONTENEDOR PARA EL "Frames" y lo de abajo: "Custom Sizes". */
+.right-container {
+    /* ASÍ SE PUSO EL SEGUNDO DIV DEBAJO DEL PRIMERO. */
+    display: grid;
+    float: left;
+    max-width: 680px;
+}
+
 .texto {
     font-family: 'Roboto';
     font-weight: 400; /** LIGHT */
@@ -35,15 +52,6 @@ body{background: #E5E5E5;}
     */
    text-align: justify;
    text-justify: inter-word;
-}
-
-.izquierda{
-    width: 20%;
-    min-height: 800px;
-    min-width: 200px;
-    float: left;  
-    margin-top: 0px;  
-    padding-top: 0px;  
 }
 
 .izquierda p {
@@ -78,4 +86,15 @@ body{background: #E5E5E5;}
     padding-top: 18px;
     margin-top: 0px;
     float: left;
+    /* ESPACIO ENTRE ESTE Y EL OTRO CON LA IMAGEN. */
+    padding-bottom: 35px;
+}
+
+.derecha2 {
+    background-color: white;
+    padding: 50px;
+}
+
+.subtitulo {
+    margin: 0px;
 }
