--- a/estilo4.css
+++ b/estilo4.css
@@ -3,8 +3,12 @@ body{background: #E5E5E5;}
 .arriba{width: 100%; height: 100px;}
 
 .contenedor {
-    display: flex;
-    flex-wrap: nowrap;
+    /* display: flex;
+    flex-wrap: nowrap; */
+
+    display: block;
+
+
     /* PARA QUE SE CENTRE. */
     margin: auto;
     
@@ -43,6 +47,8 @@ body{background: #E5E5E5;}
     /* ASÍ SE PUSO EL SEGUNDO DIV DEBAJO DEL PRIMERO. */
     display: grid;
     float: left;
+    /* PARA QUE NO CREZCA NI DECREZCA. */
+    min-width: 680px;
     max-width: 680px;
 }
 
@@ -99,14 +105,29 @@ body{background: #E5E5E5;}
     margin-top: 0px;
     float: left;
     /* ESPACIO ENTRE ESTE Y EL OTRO CON LA IMAGEN. */
-    padding-bottom: 35px;
+    padding-bottom: 0px;
 }
 
 .derecha2 {
     background-color: white;
     padding: 50px;
+    /* PARA QUE SE ACOMODEN EN LA MISMA LÍNEA */
+    display: flex;
+    flex-wrap: nowrap;
+    margin-top: 60px;
 }
 
 .subtitulo {
     margin: 0px;
+}
+
+.izquierdatarjeta {
+    float: left;
+
+}
+
+.derechatarjeta {
+    margin: 0px;
+    padding: 0px;
+    float: left;
 }
