TÍTULO Y TEXTO DIV ACOMODADOS - YA CASI FINAL
- Ya solamente falta acomodar el útimo texto que está abajo para tenerlo
  terminado. No quedará exactamente igual, pero sí se acerca al
  resultado deseado.

--- a/estilo4.css
+++ b/estilo4.css
@@ -15,7 +15,7 @@ body{background: #E5E5E5;}
     /* PARA QUE NO SE PUEDA HACER MENOS ANCHA LA PÁGINA.
         ES LA SUMA DE LOS DIVS DEL CONTENIDO. */
     min-width: 880px;
-    min-height: none;
+    /* min-height: min-content; */
     
 }
 
@@ -128,18 +128,32 @@ body{background: #E5E5E5;}
     margin-top: 60px;
 }
 
-.subtitulo {
-    margin: 0px;
-}
-
 .izquierdatarjeta {
     float: left;
+    padding-top: 15px;
+    /* PARA QUE SE PONGA CADA ELEMENTO DEBAJO DEL OTRO. */
+    display: grid;
 
+}
+.subtitulo {
+    /* margin: 0px; */
+    float: left;
+    margin: 0px;
+    font-family: 'Roboto';
+    font-weight: 900;
+    font-size: x-large;
+}
+
+.textochico {
+    font-family: 'Roboto';
+    font-size: small;
+    font-weight: 400;
+    line-height: 1.5;
 }
 
 .derechatarjeta {
-    margin-left: 100px;
+    margin-left: 60px;
     margin-right: 80px;
     padding: 0px;
-    float: left;
+    float: right;
 }
